// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category product initial renders properly 1`] = `
"<NavLink to={{...}} activeStyle={{...}} style={{...}} onClick={[Function: getProducts]}>
  <CategoryLi />
</NavLink>"
`;

exports[`Category product initial renders properly 2`] = `
"<NavLink to={{...}} activeStyle={{...}} style={{...}} onClick={[Function: getProducts]}>
  <CategoryLi>
    category
  </CategoryLi>
</NavLink>"
`;
